# enigma

./: .clangd  CMakeLists.txt  README.md  com.josephumana.enigma.desktop
src/: CMakeLists.txt  Main.qml  backend.cpp  backend.hpp  main.cpp
